# equipment_control

./: .gitignore  Blue_Oxford_Kryo_control.py  I_von_t_dep.py  Nova_SEM_IV.py  device_finder.py  example.py  github_ssh_key.txt  github_ssh_key.txt.pub  known_working_requirements.txt  pyproject.toml  readme.md  requirements.txt  white_cryo_UvB.py  white_cryo_UvT.py
equipment_control/: __init__.py  ar488.py  device.py  display.py
gpib-installation/: INSTALL_linux-gpib.md  adapter_support.md
patches/: 0001-Add-actual-TERMCHAR-support-to-USBTMC-interface.patch  0002-Add-actual-TERMCHAR-support-to-GPIB-interface.patch  patches.md
pulsed/: README.md  base.py  config.py  export.py  frontend.py  main.py
pulsed/impl/: dummy.py  keithley2400pulse.py
src/: device.py  windows.py
