[build-system]
requires = ["setuptools >= 40.8.0"]

[project]
name = "equipment_control"
version = "2026.0.0"
description = "Addition to pymeasure to support the AR488 adapters and update their GUI to allow for procedures with no hardcoded devices."
readme = "readme.md"
requires-python = ">= 3.12.3"
authors = [
    {name = "Arne Hof", email = "s2781209@stud.uni-frankfurt.de"},
]
dependencies = [
    "gpib-ctypes>=0.3.0",
    "numpy>=2.4.2",
    "PyMeasure>=0.15.0",
    "PySide6>=6.10.2",
    "PyVISA>=1.16.1",
    "PyVISA-py>=0.8.1",
]

[tool.setuptools]
packages = [
  "equipment_control",
]