[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "equipment_control"
version = "2026.0.0"
description = "Addition to pymeasure to support the AR488 adapters and update their GUI to allow for procedures with no hardcoded devices."
readme = "readme.md"
requires-python = ">= 3.12.3"
authors = [
    {name = "Arne Hof", email = "s2781209@stud.uni-frankfurt.de"},
]
dependencies = [
    "gpib-ctypes>=0.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.2",
    "PyMeasure>=0.15.0",
    "PySide6>=6.10.2",
    "PyVISA>=1.16.1",
    "PyVISA-py>=0.8.1",
    "psutil>=7.2.2",
    "zeroconf>=0.148.0"
]

[project.scripts]
pulsed = "pulsed.main:main"
equipment_control = "device_finder:main"


